Fixed Quick Links and other layout issues

--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body {
     background-color: black;
 }
 
-/* html {
+html {
   scroll-behavior: smooth;
-} */
+}
 
 nav {
     background-color: rgb(255 255 255 / .95);
